Signed-off-by: luizh3nrique <luizh3nrique00@gmail.com>

--- a/Pages/Historia/index.html
+++ b/Pages/Historia/index.html
@@ -20,10 +20,10 @@
 <body>
 
     <header class="header">
-        <h1> <a href="../../Pages/Home/index.html"> Cozinha Crocante</a></h1>
+        <h1> <a href="../../index.html"> Cozinha Crocante</a></h1>
 
         <nav class="header-nav">
-            <a href="../../Pages/Home/index.html">Home</a>
+            <a href="../../index.html">Home</a>
             <a href="#">História</a>
             <a href="../Menu/index.html">Menu</a>
             <a href="../Atualização/index.html">Atualizações</a>
@@ -41,7 +41,7 @@
     <section class="menu-mobile">
         <div class="menu-mobile-conteudo">
             <nav class="links-mobile">
-                <a href="../../Pages/Home/index.html">Home</a>
+                <a href="../../index.html">Home</a>
                 <a id="select" href="#">História</a>
                 <a href="../Menu/index.html">Menu</a>
                 <a href="../Atualização/index.html">Atualizações</a>
