--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="home.css">
-    <link rel="stylesheet" href="../../reserva.css">
-    <link rel="stylesheet" href="../../global.css">
+    <link rel="stylesheet" href="reserva.css">
+    <link rel="stylesheet" href="global.css">
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
-    <link rel="shortcut icon" href="../../icon/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href="icon/favicon-32x32.png" type="image/x-icon">
 
     <title>Restaurante - Home</title>
 </head>
@@ -23,10 +23,10 @@
         <h1> <a href="#"> Cozinha Crocante</a></h1>
         <nav class="header-nav">
             <a href="#">Home</a>
-            <a href="../Historia/index.html">História</a>
-            <a href="../Menu/index.html">Menu</a>
-            <a href="../Atualização/index.html">Atualizações</a>
-            <a href="../contato/index.html">Contato</a>
+            <a href="./Pages/Historia/index.html">História</a>
+            <a href="./Pages/Menu/index.html">Menu</a>
+            <a href="./Pages/Atualização/index.html">Atualizações</a>
+            <a href="./Pages/contato/index.html">Contato</a>
         </nav>
 
         <div class="buttons-header">
@@ -41,10 +41,10 @@
         <div class="menu-mobile-conteudo">
             <nav class="links-mobile">
                 <a href="#">Home</a>
-                <a href="../Historia/index.html">História</a>
-                <a href="../Menu/index.html">Menu</a>
-                <a href="../Atualização/index.html">Atualizações</a>
-                <a href="../contato/index.html">Contato</a>
+                <a href="./Pages/Historia/index.html">História</a>
+                <a href="./Pages/Menu/index.html">Menu</a>
+                <a href="./Pages/Atualização/index.html">Atualizações</a>
+                <a href="./Pages/contato/index.html">Contato</a>
             </nav>
         </div>
 
@@ -119,19 +119,19 @@
 
         <div class="carrosel">
             <div class="slide">
-                <img src="../../img/slide/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Imagem 1">
+                <img src="img/slide/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Imagem 1">
                 <p class="description"><ion-icon name="location"></ion-icon> São Paulo, Brasil</p>
                 <span class="descRest">Restaurante de Alta Qualidade</span>
             </div>
 
             <div class="slide">
-                <img src="../../img/slide/ivan-torres-MQUqbmszGGM-unsplash.jpg" alt="Imagem 1">
+                <img src="img/slide/ivan-torres-MQUqbmszGGM-unsplash.jpg" alt="Imagem 1">
                 <p class="description">Pizza de Queijo <br> </p>
                 <span class="notaSlide">4/5⭐⭐⭐⭐</span>
             </div>
 
             <div class="slide">
-                <img src="../../img/slide/jason-leung-O67LZfeyYBk-unsplash.jpg" alt="Imagem 1">
+                <img src="img/slide/jason-leung-O67LZfeyYBk-unsplash.jpg" alt="Imagem 1">
                 <p class="description">Bife</p>
                 <span class="notaSlide bifeImg">3.8/5⭐⭐⭐</span>
             </div>
@@ -152,7 +152,7 @@
 
             <div class="card">
                 <div class="img">
-                    <img src="../../img/breakfast/brett-jordan-8xt8-HIFqc8-unsplash.jpg">
+                    <img src="img/breakfast/brett-jordan-8xt8-HIFqc8-unsplash.jpg">
                 </div>
                 <h2>Manhã Fresca</h2>
 
@@ -164,7 +164,7 @@
 
             <div class="card">
                 <div class="img">
-                    <img src="../../img/breakfast/louis-hansel-dphM2U1xq0U-unsplash.jpg">
+                    <img src="img/breakfast/louis-hansel-dphM2U1xq0U-unsplash.jpg">
                 </div>
                 <h2>Hambúrguer</h2>
 
@@ -176,7 +176,7 @@
 
             <div class="card">
                 <div class="img">
-                    <img src="../../img/breakfast/lucas-swennen-1W_MyJSRLuQ-unsplash.jpg">
+                    <img src="img/breakfast/lucas-swennen-1W_MyJSRLuQ-unsplash.jpg">
                 </div>
                 <h2>Panqueca Premium</h2>
 
@@ -202,14 +202,14 @@
 
             <div class="cardNews">
                 <div class="imgNew">
-                    <img src="../../img/news/pablo-merchan-montes-Orz90t6o0e4-unsplash.jpg">
+                    <img src="img/news/pablo-merchan-montes-Orz90t6o0e4-unsplash.jpg">
                 </div>
                 <span class="news">Dicas para um estilo de vida saudável e uma vida feliz</span>
             </div>
 
             <div class="cardNews">
                 <div class="imgNew">
-                    <img src="../../img/news/stefan-johnson-xIFbDeGcy44-unsplash.jpg">
+                    <img src="img/news/stefan-johnson-xIFbDeGcy44-unsplash.jpg">
                 </div>
                 <span class="news">Como fazer uma refeição saudável</span>
             </div>
@@ -255,8 +255,8 @@
 
     </footer>
 
-    <script src="script.js"></script>
-    <script src="../../scriptGlobal.js"></script>
+    <script src="script-home.js"></script>
+    <script src="scriptGlobal.js"></script>
 </body>
 
 </html>
