--- a/Pages/contato/index.html
+++ b/Pages/contato/index.html
@@ -20,10 +20,10 @@
 <body>
 
     <header class="header">
-        <h1> <a href="../../Pages/Home/index.html"> Cozinha Crocante</a></h1>
+        <h1> <a href="../../index.html"> Cozinha Crocante</a></h1>
 
         <nav class="header-nav">
-            <a href="../../Pages/Home/index.html">Home</a>
+            <a href="../../index.html">Home</a>
             <a href="../Historia/index.html">História</a>
             <a href="../Menu/index.html">Menu</a>
             <a href="../Atualização/index.html">Atualizações</a>
@@ -41,8 +41,8 @@
     <section class="menu-mobile">
         <div class="menu-mobile-conteudo">
             <nav class="links-mobile">
-                <a href="../../Pages/Home/index.html">Home</a>
-                <a id="select" href="../Historia/index.html">História</a>
+                <a href="../../index.html">Home</a>
+                <a href="../Historia/index.html">História</a>
                 <a href="../Menu/index.html">Menu</a>
                 <a href="../Atualização/index.html">Atualizações</a>
                 <a href="#">Contato</a>
