Signed-off-by: luizh3nrique <luizh3nrique00@gmail.com>

--- a/Pages/Historia/index.html
+++ b/Pages/Historia/index.html
@@ -113,7 +113,7 @@
 
                 <div class="button-detalhe">
                     <button class="noticia">Confira Noticias</button>
-                    <button class="contact">Diga Oi</button>
+                    <button class="contact"><a href="../contato/index.html">Diga oi</a></button>
                 </div>
             </div>
 
